<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.doppelkool</groupId>
    <artifactId>ItemForgeGUI</artifactId>
    <version>1.0.6-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>ItemForgeGUI</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Repositories -->
    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
            <layout>default</layout>
        </repository>
    </repositories>

    <!-- Dependencies -->
    <dependencies>
        <!-- Spigot: Provided by the server -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>craftbukkit</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- AnvilGUI: Needed as a shaded plugin because there is no plugin to install on the server -->
        <dependency>
            <groupId>net.wesjd</groupId>
            <artifactId>anvilgui</artifactId>
            <version>1.10.4-SNAPSHOT</version>
        </dependency>

        <!-- Lombok: Compile-time only -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.jeff-media</groupId>
            <artifactId>custom-block-data</artifactId>
            <version>2.2.3</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.jeff-media</groupId>
            <artifactId>armor-equip-event</artifactId>
            <version>1.0.3</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.jeff-media</groupId>
            <artifactId>MorePersistentDataTypes</artifactId>
            <version>2.4.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <!-- Build and Plugins -->
    <build>
        <plugins>
            <!-- Compiler Plugin (Java 17) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>

            <!-- Maven Shade Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <!-- Prevents creation of a dependency-reduced-pom.xml -->
                            <createDependencyReducedPom>false</createDependencyReducedPom>

                            <!-- Filters for shading specific artifacts -->
                            <filters>
                                <!-- Include everything for the AnvilGUI artifact -->
                                <filter>
                                    <artifact>net.wesjd:anvilgui</artifact>
                                    <includes>
                                        <include>**/*</include>
                                    </includes>
                                </filter>
                                <!-- Global filter to exclude some common files -->
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>lombok/**</exclude>
                                        <exclude>module-info.class</exclude>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>

                            <!-- Relocation to avoid conflicts with the custom block data API -->
                            <relocations>
                                <relocation>
                                    <pattern>com.jeff_media.customblockdata</pattern>
                                    <shadedPattern>${project.groupId}.${project.artifactId}.customblockdata</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.jeff_media.armorequipevent</pattern>
                                    <shadedPattern>${project.groupId}.${project.artifactId}.armorequipevent</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.jeff_media.morepersistentdatatypes</pattern>
                                    <shadedPattern>${project.groupId}.${project.artifactId}.morepersistentdatatypes</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <!-- Resource Filtering (if needed) -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

</project>
